# spendit

./: .gitignore  build_client.sh  dev.sh  fake-data.py  pyproject.toml  readme.md
client-react/: README.md  index.html  package.json
client-react/src/: fetch.tsx  main.tsx  router.tsx
client-react/src/features/: AutofillPanel.tsx  CategoryPlot.tsx  EditBox.tsx  NavBar.tsx  RenameModal.tsx  SummaryPanel.tsx  TransactionTable.tsx
client-react/src/pages/: AboutPage.tsx  HomePage.tsx  TablePage.tsx  router.tsx
client-react/src/store/: index.ts  transactionsSlice.tsx
client-svelte/: README.md  package.json  svelte.config.js
client-svelte/src/: app.scss  store.js
client-svelte/src/routes/: +layout.js  +layout.svelte  +page.svelte  Header.svelte
client-svelte/src/routes/about/: +page.svelte
client-svelte/src/routes/table/[table]/: +page.svelte  AutofillPanel.svelte  CategoryPlot.svelte  DataTable.svelte  EditBox.svelte  SummaryPanel.svelte
client-vue3/: README.md  index.html  package.json
client-vue3/src/: App.vue  main.js  router.js
client-vue3/src/components/: AutofillPanel.vue  CategoriesPanel.vue  CategoryPlot.vue  DataTable.vue  EditBox.vue  NavBar.vue  SummaryPanel.vue  TransactionTable.vue  VuePlotly.vue  plotlyConstants.js
client-vue3/src/stores/: index.js  transactionsStore.js
client-vue3/src/views/: AboutView.vue  HomeView.vue  TableView.vue  router.js
rpc/: config.build.json  rpc.js  rpc.ts
sample/: entries.csv  example1.csv  example2.csv  gen_data.py
server/: app.py  cli.py  db.py  handlers.py
server/client/: index.html
server/client/assets/: AboutView-C45cGyk1.js  AboutView-DXtbZ0Uc.js  AboutView-DzBDbqd5.js  AboutView-yZmbT3kS.js  index-BhW2TTwr.js  index-BmnBEAuP.js  index-CLBXQRP-.js  index-CREqSx6i.css  index-R8jtnbT2.css  index-o30KbOda.js  index-sds9NMaX.css
server/data/: categories.yaml
spendit/: app.py  app.yaml  cli.py  db.py  fs.py  handlers.py  run.py
spendit/client/: index.html
spendit/client/assets/: AboutView-Col4HsAc.js  AboutView-XFsSCz7M.js  index-BMAmA1V_.css  index-C_5uzpnA.css  index-DV3dmAC6.js  index-hIuZ3m8R.js
spendit/data/: categories.yaml  data.sqlite3
