[project]
name = "spendit"
version = "0.2.0"
description = "Data viz cli/web app"
authors = [
    { name = "Bosco Ho", email = "apposite@gmail.com" }
]
dependencies = [
    "addict",
    "arrow>=1.3.0",
    "click>=8.1.7",
    "colorama",
    "fastapi",
    "pandas",
    "path",
    "psutil",
    "pydash",
    "python-multipart",
    "rich",
    "ruyaml",
    "structlog",
    "uvicorn",
    "ruff>=0.4.4",
    "ruff-lsp>=0.0.53",
    "pytest>=8.2.1",
    "sqladaptor>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
spendit = "spendit.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["spendit"]
